{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "a9bc3591-63b0-4495-902c-31fce5e1fec2",
            "actions": [
                {
                    "name": "startGame",
                    "type": "PassThrough",
                    "id": "0241090c-be7d-4b17-8f14-3c81dad0ce21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchAxisMovement",
                    "type": "Button",
                    "id": "186724d1-aed5-492a-8650-39d4dfafd51b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a45e035c-db01-4bb5-ba2e-2a43af9130b6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "startGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e53f3f8-86a5-4c06-92b3-1ddba3e6779a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchAxisMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}